Added FASG Start Page, Experimentation with Fonts

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <footer>
         <p>&copy; Swinburne Life Preservation Committee.</p>
-        <p>This website and any mention of the 'Swinburne Life Preservation Committee' or 'SLPC' is not associated in any way with Swinburne University</p>
+        <p>This website and any mention of the 'Swinburne Life Preservation Committee' or 'SLPC' is not associated in any way with Swinburne University.</p>
       </footer>
     </div> <!-- /container -->
 
