--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <title>SLPC</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <!-- <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> -->
 
     <!-- Custom styles for this template -->
-    <link href="bootstrap/css/jumbotron.css" rel="stylesheet">
+    <link href="bootstrap/css/jumbotron2.css" rel="stylesheet">
 
     <!-- Bootstrap Social Buttons CSS -->
-    <link href="bootstrap/css/bootstrap-social.css" rel="stylesheet">
+    <!-- <link href="bootstrap/css/bootstrap-social.css" rel="stylesheet"> -->
 
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"> -->
 
   </head>
 
