- Changed Heading on SLPC - Changed Heading on FASG

--- a/fasg.html
+++ b/fasg.html
@@ -32,11 +32,13 @@
       <h2>Faction Against Swinburne Games</h2>
     </div>
 
-    <div class="row">
-      <div class="col-sm-2"></div>
-      <div class="col-sm-8">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe controls class="embed-responsive-item" src="http://www.youtube.com/embed/watch?v=zpOULjyy-n8"></iframe>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe controls class="embed-responsive-item" src="http://www.youtube.com/embed/watch?v=zpOULjyy-n8"></iframe>
+          </div>
         </div>
       </div>
     </div>
