--- a/fasg.html
+++ b/fasg.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>SLPC</title>
+    <title>FASG</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -41,6 +41,14 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="container-fluid">
+      <br>
+      <br>
+      <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
+        <span class="fa fa-facebook"></span>
+      </a>
     </div>
 
     <div class="footer">
