--- a/fasg.html
+++ b/fasg.html
@@ -34,18 +34,15 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
+        <div class="col-md-offset-2 col-md-8">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe controls class="embed-responsive-item" src="http://www.youtube.com/embed/watch?v=zpOULjyy-n8"></iframe>
+            <iframe controls class="embed-responsive-item" src="https://www.youtube.com/embed/Q4p8seqzZtg"></iframe>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container-fluid">
-      <br>
-      <br>
+    <div id="fbbutton">
       <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
         <span class="fa fa-facebook"></span>
       </a>
