- Added text to SLPC page - Added small 'proptext' to FASG page - More CSS changes

--- a/fasg.html
+++ b/fasg.html
@@ -43,6 +43,8 @@
     </div>
 
     <div id="fbbutton">
+      <p></p>
+      <p id="proptext">Don't believe their lies.</p>
       <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
         <span class="fa fa-facebook"></span>
       </a>
