--- a/slpc.html
+++ b/slpc.html
@@ -50,17 +50,19 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h2 id="swinlympia">Swinlympia 2016!</h2>
+          <p>Scheduled to start on xxxx, Swinlympia 2016 is a series of games that celebrates the upcoming Rio Olympics 2016 - with the winners receiving respect and admiration for their efforts.</p>
+          <p>The games will test the mental fortitude, physical prowess, and strategy-building of its contestants, with games scheduled to run once a week.</p>
+          <p>At the end of the four week event, a winner will be chosen to be forever enshrined in Swinburne legacy as the champion of Swinlympia!</p>
         </div>
         <div class="col">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h2>What We Do</h2>
+          <p>Here at the SLPC, it is our mission to let the human race be the best it can be. We want to preserve and grow the best parts of humanity.</p>
        </div>
         <div class="col">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Who We Are</h2>
+          <p>Lead by Harold Swine - former student and renown pro-life activist, and backed by other esteemed board members, the Swinburne Life Preservation Committee is run by experts in their respective areas. Although we are a relatively new organisation, we're dedicated to achieving our goals, no matter the size.
+          <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> -->
         </div>
       </div>
 
