- Added new pages to SLPC Site: About Page and Swinlympia General page - Added image for Swinlympia General Page

--- a/slpcabout.html
+++ b/slpcabout.html
@@ -43,9 +43,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="slpc.html">Home <span class="sr-only">(current)</span></a></li>
+            <li><a href="slpc.html">Home</a></li>
             <li><a href="slpcswinlympia.html">Swinlympia</a></li>
-            <li><a href="slpcabout.html">About Us</a></li>
+            <li class="active"><a href="slpcabout.html">About Us<span class="sr-only">(current)</span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -67,17 +67,9 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col">
-          <h2 id="swinlympia">Swinlympia 2016!</h2>
-          <p>Scheduled to start on xxxx, Swinlympia 2016 is a series of games that celebrates the upcoming Rio Olympics 2016 - with the winners receiving respect and admiration for their efforts.</p>
-          <p><a class="btn btn-default" href="slpcswinlympia.html" role="button">Learn more &raquo;</a></p>
-        </div>
-        <div class="col">
-          <h2>What We Do</h2>
-          <p>Here at the SLPC, it is our mission to let the human race be the best it can be. We want to preserve and grow the best parts of humanity.</p>
-       </div>
-        <div class="col">
-          <h2>Who We Are</h2>
-          <p>Lead by Harold Swine - former student and renown pro-life activist, and backed by other esteemed board members, the Swinburne Life Preservation Committee is run by experts in their respective areas. Although we are a relatively new organisation, we're dedicated to achieving our goals, no matter the size.
+          <h2>Harold Swine</h2>
+          <p>Former student and renown Pro-life activist Harold Swine was the perfect choice to the chair the new committee. He studied health sciences and wrote his PH.D thesis on the physical tolls the Olympics play on an athlete's body - pre and post competition.</p>
+          <p>Born in Melbourne Australia, he’s always been vocal on the physical attributes Australians have, and often compares their genetics to those of the best athletes in the world.</p>
         </div>
       </div>
 
