--- a/slpcswinlympia.html
+++ b/slpcswinlympia.html
@@ -43,8 +43,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="slpc.html">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="slpcswinlympia.html">Swinlympia</a></li>
+            <li><a href="slpc.html">Home</a></li>
+            <li class="active"><a href="slpcswinlympia.html">Swinlympia<span class="sr-only">(current)</span></a></li>
             <li><a href="slpcabout.html">About Us</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -67,18 +67,31 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col">
-          <h2 id="swinlympia">Swinlympia 2016!</h2>
-          <p>Scheduled to start on xxxx, Swinlympia 2016 is a series of games that celebrates the upcoming Rio Olympics 2016 - with the winners receiving respect and admiration for their efforts.</p>
-          <p><a class="btn btn-default" href="slpcswinlympia.html" role="button">Learn more &raquo;</a></p>
+          <img src="img/swinlympialogo.png" alt="Swimlympia Logo" class="img-responsive">
+          <br>
+          <p>Swinlympia will test the mental fortitude, physical prowess, and strategy-building of its contestants, with games scheduled to run once a week.</p>
+          <p>At the end of the four week event, a winner will be chosen to be forever enshrined in Swinburne legacy as the champion of Swinlympia!</p>
         </div>
         <div class="col">
-          <h2>What We Do</h2>
-          <p>Here at the SLPC, it is our mission to let the human race be the best it can be. We want to preserve and grow the best parts of humanity.</p>
+          <h2>Events</h2>
+            <h3>Week 1</h3>
+              <h4>Corridor Sprint</h4>
+              <p>Date: TBA</p>
+              <p>Explanation</p>
+            <h3>Week 2</h3>
+              <h4>Blackout</h4>
+              <p>Date: TBA</p>
+              <p>Explanation</p>
+              <h4>Wasp's Nest</h4>
+              <p>Date: TBA</p>
+              <p>Explanation</p>
+            <h3>Week 3</h3>
+              <p>Date: TBA</p>
+              <p><em>TBA</em></p>
+            <h3>Week 4</h3>
+              <p>Date: TBA</p>
+              <p><em>TBA</em></p>
        </div>
-        <div class="col">
-          <h2>Who We Are</h2>
-          <p>Lead by Harold Swine - former student and renown pro-life activist, and backed by other esteemed board members, the Swinburne Life Preservation Committee is run by experts in their respective areas. Although we are a relatively new organisation, we're dedicated to achieving our goals, no matter the size.
-        </div>
       </div>
 
       <hr>
