- Added b/w logo to files - Added b/w logo to SLPC pages

--- a/slpcabout.html
+++ b/slpcabout.html
@@ -54,13 +54,31 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Swinburne Life Preservation Committee</h1>
-        <p><em>The Home of The SLPC.</em></p>
-        <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
-          <span class="fa fa-facebook"></span>
-        </a>
+        <div class="row">
+            <div class="col-md-2">
+              <img src="img/swinlympiabwlogo.png" alt="Swimlympia Logo" id="headerlogo">
+            </div>
+            <div class="col-md-10">
+                <div class="row">
+                    <div class="col-md-12">
+                      <h1>Swinburne Life Preservation Committee</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                      <p><em>The Home of The SLPC.</em></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                      <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
+                        <span class="fa fa-facebook"></span>
+                      </a>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
-
     </div>
 
     <div class="container">
