--- a/slpcabout.html
+++ b/slpcabout.html
@@ -56,7 +56,7 @@
       <div class="container">
         <div class="row">
             <div class="col-md-2">
-              <img src="img/swinlympiabwlogo.png" alt="Swimlympia Logo" id="headerlogo">
+              <img src="img/swinlympiabwlogo.svg" alt="Swimlympia Logo" id="headerlogo">
             </div>
             <div class="col-md-10">
                 <div class="row">
