--- a/fasg.html
+++ b/fasg.html
@@ -34,20 +34,19 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-offset-2 col-md-8">
-          <div class="embed-responsive embed-responsive-16by9">
+        <div class="col-md-offset-3 col-md-6">
+          <div class="embed-responsive embed-responsive-16by9" id="video">
             <iframe controls class="embed-responsive-item" src="https://www.youtube.com/embed/Q4p8seqzZtg"></iframe>
           </div>
         </div>
       </div>
-    </div>
-
-    <div id="fbbutton">
-      <p></p>
-      <p id="proptext">Don't believe their lies.</p>
-      <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
-        <span class="fa fa-facebook"></span>
-      </a>
+      <div id="fbbutton">
+        <img src="img/swinlympialogodefaced.png" alt="Swimlympia Lies" id="swinlympiadefaced">
+        <p id="proptext">Don't believe their lies.</p>
+        <p><a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
+          <span class="fa fa-facebook"></span>
+        </a></p>
+      </div>
     </div>
 
     <div class="footer">
