- Added Harold Swine to imgs - Added haroldswine.jpg to slpcabout.html - Made facebook buttons actually link - Added another facebook button on slpcswinlympia

--- a/fasg.html
+++ b/fasg.html
@@ -43,7 +43,7 @@
       <div id="fbbutton">
         <img src="img/swinlympialogodefaced.png" alt="Swimlympia Lies" id="swinlympiadefaced">
         <p id="proptext">Don't believe their lies.</p>
-        <p><a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
+        <p><a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/groups/1715944161996907/">
           <span class="fa fa-facebook"></span>
         </a></p>
       </div>
