--- a/slpc.html
+++ b/slpc.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                      <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
+                      <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/groups/1018954268196727/">
                         <span class="fa fa-facebook"></span>
                       </a>
                     </div>
