--- a/slpcabout.html
+++ b/slpcabout.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                      <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
+                      <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/groups/1018954268196727/">
                         <span class="fa fa-facebook"></span>
                       </a>
                     </div>
@@ -88,6 +88,7 @@
           <h2>Harold Swine</h2>
           <p>Former student and renown Pro-life activist Harold Swine was the perfect choice to the chair the new committee. He studied health sciences and wrote his PH.D thesis on the physical tolls the Olympics play on an athlete's body - pre and post competition.</p>
           <p>Born in Melbourne Australia, he’s always been vocal on the physical attributes Australians have, and often compares their genetics to those of the best athletes in the world.</p>
+          <img src="img/haroldswine.jpg" alt="Harold Swine" id="haroldswine">
         </div>
       </div>
 
