--- a/slpcswinlympia.html
+++ b/slpcswinlympia.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                      <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/">
+                      <a class="btn btn-social-icon btn-lg btn-facebook" href="http://www.facebook.com/groups/1018954268196727/">
                         <span class="fa fa-facebook"></span>
                       </a>
                     </div>
@@ -89,6 +89,9 @@
           <br>
           <p>Swinlympia will test the mental fortitude, physical prowess, and strategy-building of its contestants, with games scheduled to run once a week.</p>
           <p>At the end of the four week event, a winner will be chosen to be forever enshrined in Swinburne legacy as the champion of Swinlympia!</p>
+          <a class="btn btn-block btn-social btn-facebook fblike" href="http://www.facebook.com/Swinlympia-1607486292805426/">
+            <span class="fa fa-facebook"></span> Like us on Facebook!
+          </a>
         </div>
         <div class="col">
           <h2>Events</h2>
