- Added David to slpcabout.html

--- a/slpcabout.html
+++ b/slpcabout.html
@@ -90,6 +90,18 @@
           <p>Born in Melbourne Australia, he’s always been vocal on the physical attributes Australians have, and often compares their genetics to those of the best athletes in the world.</p>
           <img src="img/haroldswine.jpg" alt="Harold Swine" id="haroldswine">
         </div>
+        <div class="col">
+          <h2>David Yang</h2>
+          <p><em>Age: 21</em></p>
+          <p><em>Occupation: Student</em></p>
+
+          <p>The former Swinlympia Champion of the 2015 season comes back to join the SLPC in their endeavours of promoting the event for the 2016 season.</p>
+          <p>David has a close relationship with the committee leader, Harold Swine, and has on occasion has expressed his admiration for his views and morals.</p>
+          <p>Upon learning about the SLPC’s true motives for the 2016 Swinlympia, David reluctantly sided with Harold Swine, understanding the need for a new world.</p>
+          <p>Primarily used to market the event, as well as serve as colour commentary during the events, Davids character is morphed around the dystopian agenda and is obliviously to the FASG’s advances.
+          Hot headed, eccentric, and charismatic, David has all the likeable tools that the SLPC wants to build their campaign around.
+          An extremely coherent understanding of the events, his knowledge is invaluable to the SLPC as they begin to initiate their eugenics program.</p>
+        </div>
       </div>
 
       <hr>
