- Added David's Image

--- a/slpcabout.html
+++ b/slpcabout.html
@@ -88,7 +88,7 @@
           <h2>Harold Swine</h2>
           <p>Former student and renown Pro-life activist Harold Swine was the perfect choice to the chair the new committee. He studied health sciences and wrote his PH.D thesis on the physical tolls the Olympics play on an athlete's body - pre and post competition.</p>
           <p>Born in Melbourne Australia, he’s always been vocal on the physical attributes Australians have, and often compares their genetics to those of the best athletes in the world.</p>
-          <img src="img/haroldswine.jpg" alt="Harold Swine" id="haroldswine">
+          <img src="img/haroldswine.jpg" alt="Harold Swine" class="memberimg">
         </div>
         <div class="col">
           <h2>David Yang</h2>
@@ -101,6 +101,7 @@
           <p>Primarily used to market the event, as well as serve as colour commentary during the events, Davids character is morphed around the dystopian agenda and is obliviously to the FASG’s advances.
           Hot headed, eccentric, and charismatic, David has all the likeable tools that the SLPC wants to build their campaign around.
           An extremely coherent understanding of the events, his knowledge is invaluable to the SLPC as they begin to initiate their eugenics program.</p>
+          <img src="img/davidyang.jpg" alt="David Yang" class="memberimg">
         </div>
       </div>
 
