--- a/slpc.html
+++ b/slpc.html
@@ -86,7 +86,7 @@
       <div class="row">
         <div class="col">
           <h2 id="swinlympia">Swinlympia 2016!</h2>
-          <p>Scheduled to start on xxxx, Swinlympia 2016 is a series of games that celebrates the upcoming Rio Olympics 2016 - with the winners receiving respect and admiration for their efforts.</p>
+          <p>Scheduled to start on May 4th, Swinlympia 2016 is a series of games that celebrates the upcoming Rio Olympics 2016 - with the winners receiving respect and admiration for their efforts.</p>
           <p><a class="btn btn-default" href="slpcswinlympia.html" role="button">Learn more &raquo;</a></p>
         </div>
         <div class="col">
