--- a/slpcswinlympia.html
+++ b/slpcswinlympia.html
@@ -97,7 +97,7 @@
           <h2>Events</h2>
             <h3>Week 1</h3>
               <h4>Corridor Sprint</h4>
-              <p>Date: TBA</p>
+              <p>Date: May 4th</p>
               <p>Explanation</p>
             <h3>Week 2</h3>
               <h4>Blackout</h4>
