- Major Website Changes: - Front Page Changed to Blog Style - Changed About Page - Lots of Moving Around - Updated Text

--- a/slpcblogs.html
+++ b/slpcblogs.html
@@ -43,9 +43,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="slpc.html">Home</a></li>
+            <li class="active"><a href="slpc.html">Home <span class="sr-only">(current)</span></a></li>
             <li><a href="slpcswinlympia.html">Swinlympia</a></li>
-            <li class="active"><a href="slpcabout.html">About Us<span class="sr-only">(current)</span></a></li>
+            <li><a href="slpcabout.html">About Us</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -81,38 +81,37 @@
       </div>
     </div>
 
+    <!-- Page Content -->
     <div class="container">
-      <!-- Example row of columns -->
+
       <div class="row">
-        <div class="col">
-          <h2>What We Do</h2>
-          <p>Here at the SLPC, it is our mission to let the human race be the best it can be. We want to preserve and grow the best parts of humanity.</p>
-        </div>
-        <div class="col">
-          <h2>Who We Are</h2>
-          <p>Lead by Harold Swine - former student and renown pro-life activist, and backed by other esteemed board members, the Swinburne Life Preservation Committee is run by experts in their respective areas. Although we are a relatively new organisation, we're dedicated to achieving our goals, no matter the size.
-        </div>
-        <div class="col">
-          <h2>Harold Swine</h2>
-          <p>Former student and renown Pro-life activist Harold Swine was the perfect choice to the chair the new committee. He studied health sciences and wrote his PH.D thesis on the physical tolls the Olympics play on an athlete's body - pre and post competition.</p>
-          <p>Born in Melbourne Australia, he’s always been vocal on the physical attributes Australians have, and often compares their genetics to those of the best athletes in the world.</p>
-          <img src="img/haroldswine.jpg" alt="Harold Swine" class="memberimg">
-        </div>
-        <div class="col">
-          <h2>David Yang</h2>
-          <p><em>Age: 21</em></p>
-          <p><em>Occupation: Student</em></p>
 
-          <p>The former Swinlympia Champion of the 2015 season comes back to join the SLPC in their endeavours of promoting the event for the 2016 season.</p>
-          <p>David has a close relationship with the committee leader, Harold Swine, and has on occasion has expressed his admiration for his views and morals.</p>
-          <p>Upon learning about the SLPC’s true motives for the 2016 Swinlympia, David reluctantly sided with Harold Swine, understanding the need for a new world.</p>
-          <p>Primarily used to market the event, as well as serve as colour commentary during the events, Davids character is morphed around the dystopian agenda and is obliviously to the FASG’s advances.
-          Hot headed, eccentric, and charismatic, David has all the likeable tools that the SLPC wants to build their campaign around.
-          An extremely coherent understanding of the events, his knowledge is invaluable to the SLPC as they begin to initiate their eugenics program.</p>
-          <img src="img/davidyang.jpg" alt="David Yang" class="memberimg">
-        </div>
-      </div>
+        <!-- Blog Post Content Column -->
+        <div class="col-lg-8">
 
+          <!-- Blog Post -->
+
+          <!-- Title -->
+          <h1>Blog Post Title</h1>
+
+          <!-- Author -->
+          <p class="lead">
+              by David Yang
+          </p>
+
+          <!-- Date/Time -->
+          <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
+
+          <hr>
+
+          <!-- Post Content -->
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+
+            
       <hr>
 
       <footer>
