--- a/slpcswinlympia.html
+++ b/slpcswinlympia.html
@@ -85,10 +85,10 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col">
-          <img src="img/swinlympialogo.png" alt="Swimlympia Logo" class="img-responsive">
+          <img src="img/swinlympialogo.png" alt="Swimlympia Logo" class="img-responsive" id="swinlympialogo">
           <br>
-          <p>Swinlympia will test the mental fortitude, physical prowess, and strategy-building of its contestants, with games scheduled to run once a week.</p>
-          <p>At the end of the four week event, a winner will be chosen to be forever enshrined in Swinburne legacy as the champion of Swinlympia!</p>
+          <p class="swinlympiatext">Swinlympia will test the mental fortitude, physical prowess, and strategy-building of its contestants, with games scheduled to run once a week.</p>
+          <p class="swinlympiatext">At the end of the four week event, a winner will be chosen to be forever enshrined in Swinburne legacy as the champion of Swinlympia!</p>
           <a class="btn btn-block btn-social btn-facebook fblike" href="http://www.facebook.com/Swinlympia-1607486292805426/">
             <span class="fa fa-facebook"></span> Like us on Facebook!
           </a>
@@ -96,15 +96,15 @@
         <div class="col">
           <h2>Events</h2>
             <h3>Week 1</h3>
-              <h4>Corridor Sprint</h4>
-              <p>Date: May 4th</p>
+              <h4>Wasp's Nest</h4>
+              <p>Date: May 9th - 1:30pm @ Wakefield Gardens</p>
               <p>Explanation</p>
             <h3>Week 2</h3>
               <h4>Blackout</h4>
-              <p>Date: TBA</p>
+              <p>Date: May 16th - 1:30pm @ </p>
               <p>Explanation</p>
-              <h4>Wasp's Nest</h4>
-              <p>Date: TBA</p>
+              <h4>Corridor Sprint</h4>
+              <p>Date: May 16th - ~2:15pm @ Wakefield Gardens</p>
               <p>Explanation</p>
             <h3>Week 3</h3>
               <p>Date: TBA</p>
