--- a/slpcnew.html
+++ b/slpcnew.html
@@ -90,7 +90,56 @@
           <p><a class="btn btn-default" href="slpcswinlympia.html" role="button" id="learnmore">Learn more &raquo;</a></p>
         </div>
 
+      <!-- Blog Post -->
+      <div class="row">
+        <div class="col-lg-8">
+
+          <!-- Title -->
+          <h1>Blog Post Title</h1>
+
+          <!-- Author -->
+          <p class="lead">
+              by David Yang
+          </p>
+
+          <!-- Date/Time -->
+          <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013</p>
+
+          <hr>
+
+          <!-- Post Content -->
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+
+        </div>
       <hr>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-8">
+
+          <!-- Title -->
+          <h1>Blog Post Title 2</h1>
+
+          <!-- Author -->
+          <p class="lead">
+              by David Yang
+          </p>
+
+          <!-- Date/Time -->
+          <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013</p>
+
+          <hr>
+
+          <!-- Post Content -->
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+
+        </div>
+      <hr>
+      </div>
 
     </div>
 
