--- a/slpcswinlympia.html
+++ b/slpcswinlympia.html
@@ -85,7 +85,7 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col">
-          <img src="img/swinlympialogo.png" alt="Swimlympia Logo" class="img-responsive" id="swinlympialogo">
+          <img src="img/swinlympialogo.png" alt="Swimlympia Logo" class="img-responsive center-block" id="swinlympialogo">
           <br>
           <p class="swinlympiatext">Swinlympia will test the mental fortitude, physical prowess, and strategy-building of its contestants, with games scheduled to run once a week.</p>
           <p class="swinlympiatext">At the end of the four week event, a winner will be chosen to be forever enshrined in Swinburne legacy as the champion of Swinlympia!</p>
