--- a/slpc.html
+++ b/slpc.html
@@ -14,6 +14,10 @@
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
+    <script src="bootstrap/js/bootstrap.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+
     <!-- Custom styles for this template -->
     <link href="bootstrap/css/jumbotron.css" rel="stylesheet">
 
@@ -81,7 +85,7 @@
     <!--Content-->
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
+        <div class="col-lg-8 col-lg-offset-2 col-lg-offset-2">
           <h2 id="swinlympia">Swinlympia 2016</h2>
           <h3 class="swinlympiatext">Next Play Session:</h3>
           <h4 class="swinlympiatext"><b>Corridor Sprint - May 16 - 1:30pm @ Place</b></h4>
@@ -94,178 +98,230 @@
 
       <!-- Blog Post -->
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost95">Remembering William Kelly-Hall, 2 years on</a>
+                </h4>
+              </div>
+              <div id="blogpost95" class="panel-collapse">
+                <div class="panel-body">
+                  <!-- Title -->
+                  <h1>Remembering William Kelly-Hall, 2 years on</h1>
 
-          <!-- Title -->
-          <h1>Remembering William Kelly-Hall, 2 years on</h1>
+                  <!-- Author -->
+                  <p><em>
+                    Felicity Boveheart, editor at The Daily Burne
+                  </em></p>
 
-          <!-- Author -->
-          <p><em>
-            Felicity Boveheart, editor at The Daily Burne
-          </em></p>
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 30 April, 2016</p>
 
-          <!-- Date/Time -->
-          <p><span class="glyphicon glyphicon-time"></span> 7/4/2LIES6</p>
+                  <hr>
 
-          <hr>
-
-          <!-- Post Content -->
-          <p class="lead">Next week on the 7th of May will mark the two year anniversary of the death of William Kelly-Hall, Swinlympia Alumni Season 2013.</p>
-          <p>A fierce competitor, William was a standout during the ‘13 season of the games. An all around talent, his game has helped shaped some of the competitors of today.</p>
-          <p>From all of us here at The Daily Burne, SLPC and Swinlympia, our regards go out to the Kelly-Hall family.</p>
+                  <!-- Post Content -->
+                  <p class="lead">Next week on the 7th of May will mark the two year anniversary of the death of William Kelly-Hall, Swinlympia Alumni Season 2013.</p>
+                  <p>A fierce competitor, William was a standout during the ‘13 season of the games. An all around talent, his game has helped shaped some of the competitors of today.</p>
+                  <p>From all of us here at The Daily Burne, SLPC and Swinlympia, our regards go out to the Kelly-Hall family.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      <hr>
-      <hr>
       </div>
 
       <!-- Blog Post -->
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost">~ 0pen ur 3yes ‘Competitors’  ~</a>
+                </h4>
+              </div>
+              <div id="blogpost" class="panel-collapse collapse">
+                <div class="panel-body fasghack">
+                  <!-- Title -->
+                  <h1>~ 0pen ur 3yes ‘Competitors’  ~</h1>
 
-          <!-- Title -->
-          <h1>~ 0pen ur 3yes ‘Competitors’  ~</h1>
+                  <!-- Author -->
+                  <p><em>
+                    X
+                  </em></p>
 
-          <!-- Author -->
-          <p><em>
-            X
-          </em></p>
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> 7/4/2LIES6</p>
 
-          <!-- Date/Time -->
-          <p><span class="glyphicon glyphicon-time"></span> 7/4/2LIES6</p>
+                  <hr>
 
-          <hr>
-
-          <!-- Post Content -->
-          <p class="lead">David David David</p>
-          <p><em>I know something, about chu. You went to Mowbray, thats a private school</em>HahaAHhahAha May as well start calling me Xminem, The Real Slim SHADY</p>
-          <p>Tisk squared. U think it was hard finding that.</p>
-          <p>U dnt think we know about……. <u>THE PHONE CALL?</u><p>
-          <p>hA</p>
-          <p>#thetruthwillsetusfree</p>
+                  <!-- Post Content -->
+                  <p class="lead">David David David</p>
+                  <p><em>I know something, about chu. You went to Mowbray, thats a private school</em>HahaAHhahAha May as well start calling me Xminem, The Real Slim SHADY</p>
+                  <p>Tisk squared. U think it was hard finding that.</p>
+                  <p>U dnt think we know about……. <u>THE PHONE CALL?</u><p>
+                  <p>hA</p>
+                  <p>#thetruthwillsetusfree</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      <hr>
-      <hr>
       </div>
 
       <!-- Blog Post -->
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost96">The Swinlympics are underway</a>
+                </h4>
+              </div>
+              <div id="blogpost96" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <!-- Title -->
+                  <h1>The Swinlympics are underway</h1>
 
-          <!-- Title -->
-          <h1>The Swinlympics are underway</h1>
+                  <!-- Author -->
+                  <p><em>
+                    Felicity Boveheart, editor at The Daily Burne
+                  </em></p>
 
-          <!-- Author -->
-          <p><em>
-            Felicity Boveheart, editor at The Daily Burne
-          </em></p>
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> April 5, 2016</p>
 
-          <!-- Date/Time -->
-          <p><span class="glyphicon glyphicon-time"></span> April 5, 2016</p>
+                  <hr>
 
-          <hr>
-
-          <!-- Post Content -->
-          <p class="lead">Greetings competitors,</p>
-          <p>Following yesterdays official Swinlympia Press Conference, the games are now in full swing.</p>
-          <p>Champion Yang, as well as other promoters from the SLPC will be around campus over the following weeks to help further promote the events. Be wary though, as during the press conference, an altercation broke out between Mr Yang and a riled up aggressor in the crowd.</p>
-          <p>An eyewitness, who wished to remain anonymous, stated that ‘He just got up and preached that this whole Swinlympia ordeal was a lie. Some sort of eugenics thing, I think I heard him say. Such gibberish, he must be crazy, he even tried to take a swing at the Champion’.<p>
-          <p>We were unable to receive any comments from the attacker at this time. His whereabouts remain unknown.</p>
-          <p>Without any facts, all I can say is that this pure bile is nonsense, but we here at The Daily Burne pride ourselves on reporting an unbiased story for we fight for the truth.</p>
-          <br>
-          <p>Stay tuned, as this seasons Swinlympia is about to begin, and the stakes couldn’t be any higher!</p>
+                  <!-- Post Content -->
+                  <p class="lead">Greetings competitors,</p>
+                  <p>Following yesterdays official Swinlympia Press Conference, the games are now in full swing.</p>
+                  <p>Champion Yang, as well as other promoters from the SLPC will be around campus over the following weeks to help further promote the events. Be wary though, as during the press conference, an altercation broke out between Mr Yang and a riled up aggressor in the crowd.</p>
+                  <p>An eyewitness, who wished to remain anonymous, stated that ‘He just got up and preached that this whole Swinlympia ordeal was a lie. Some sort of eugenics thing, I think I heard him say. Such gibberish, he must be crazy, he even tried to take a swing at the Champion’.<p>
+                  <p>We were unable to receive any comments from the attacker at this time. His whereabouts remain unknown.</p>
+                  <p>Without any facts, all I can say is that this pure bile is nonsense, but we here at The Daily Burne pride ourselves on reporting an unbiased story for we fight for the truth.</p>
+                  <br>
+                  <p>Stay tuned, as this seasons Swinlympia is about to begin, and the stakes couldn’t be any higher!</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      <hr>
-      <hr>
       </div>
 
       <!-- Blog Post -->
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost97">~ X MARKS THA SPOT ~</a>
+                </h4>
+              </div>
+              <div id="blogpost97" class="panel-collapse collapse">
+                <div class="panel-body fasghack">
+                  <!-- Title -->
+                  <h1>~ X MARKS THA SPOT ~</h1>
 
-          <!-- Title -->
-          <h1>~ X MARKS THA SPOT ~</h1>
+                  <!-- Author -->
+                  <p><em>
+                    X
+                  </em></p>
 
-          <!-- Author -->
-          <p><em>
-            X
-          </em></p>
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> March 21, 8008</p>
 
-          <!-- Date/Time -->
-          <p><span class="glyphicon glyphicon-time"></span> March 21, 8008</p>
+                  <hr>
 
-          <hr>
-
-          <!-- Post Content -->
-          <p class="lead">Harold Harold Harold.</p>
-          <p>I once… had strings… but now, I’m freeeee</p>
-          <p>There are no strings on…. Meeeee</p>
-          <br>
-          <p>You have a secret.</p>
-          <p>!m go!ng 2 f!nd !t  ~ HAHAHAHAHAHA</p>
-
+                  <!-- Post Content -->
+                  <p class="lead">Harold Harold Harold.</p>
+                  <p>I once… had strings… but now, I’m freeeee</p>
+                  <p>There are no strings on…. Meeeee</p>
+                  <br>
+                  <p>You have a secret.</p>
+                  <p>!m go!ng 2 f!nd !t  ~ HAHAHAHAHAHA</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      <hr>
-      <hr>
       </div>
 
       <!-- Blog Post -->
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost98">David Yang rejoins the team</a>
+                </h4>
+              </div>
+              <div id="blogpost98" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <!-- Title -->
+                  <h1>David Yang rejoins the team</h1>
 
-          <!-- Title -->
-          <h1>David Yang rejoins the team</h1>
+                  <!-- Author -->
+                  <p><em>
+                    Felicity Boveheart, editor of The Daily Burne
+                  </em></p>
 
-          <!-- Author -->
-          <p><em>
-            Felicity Boveheart, editor of The Daily Burne
-          </em></p>
+                  <!-- Date/Time -->
+                  <p><span class="glyphicon glyphicon-time"></span> March 20, 2016</p>
 
-          <!-- Date/Time -->
-          <p><span class="glyphicon glyphicon-time"></span> March 20, 2016</p>
+                  <hr>
 
-          <hr>
-
-          <!-- Post Content -->
-          <p class="lead">Breaking News</p>
-          <p>Greetings competitors,</p>
-          <p>Last week, Harold Swine - Chairman of the SLPC - opened up the 2016 year by announcing the return of the Swinlympia, now under SLPC promotion. The press conference showered much awe over the Swinburne community as this year’s games will be heralded as the beginning of ‘The New Era’, establishing an open call out to all members of the community to compete in the Swinlympia.</p>
-          <p>However, last night, current Swinlympia Champion - David Yang - broke his silence on the matter and announced that he too will be returning to Swinburne and will serve as lead promoter for the events, as well appear on commentary. Yang tweeted, ‘Of course i’m back, did you really doubt it? #TheChampIsHere shoutout to @JohnCena’</p>
-          <br>
-          <p>David is scheduled to appear at the official 2016 Swinlympia Press Conference held on the 4th of April.</p>
-
+                  <!-- Post Content -->
+                  <p class="lead">Breaking News</p>
+                  <p>Greetings competitors,</p>
+                  <p>Last week, Harold Swine - Chairman of the SLPC - opened up the 2016 year by announcing the return of the Swinlympia, now under SLPC promotion. The press conference showered much awe over the Swinburne community as this year’s games will be heralded as the beginning of ‘The New Era’, establishing an open call out to all members of the community to compete in the Swinlympia.</p>
+                  <p>However, last night, current Swinlympia Champion - David Yang - broke his silence on the matter and announced that he too will be returning to Swinburne and will serve as lead promoter for the events, as well appear on commentary. Yang tweeted, ‘Of course i’m back, did you really doubt it? #TheChampIsHere shoutout to @JohnCena’</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      <hr>
-      <hr>
       </div>
 
       <!-- Blog Post -->
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-lg-offset-2">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" href="#blogpost99">The Swinlympia has returned!</a>
+                </h4>
+              </div>
+              <div id="blogpost99" class="panel-collapse collapse">
+                <div class="panel-body">
+                <h1>The Swinlympia has returned!</h1>
 
-          <!-- Title -->
-          <h1>The Swinlympia has returned!</h1>
+                <!-- Author -->
+                <p><em>
+                  Felicity Boveheart, editor of The Daily Burne
+                </em></p>
 
-          <!-- Author -->
-          <p><em>
-            Felicity Boveheart, editor of The Daily Burne
-          </em></p>
+                <!-- Date/Time -->
+                <p><span class="glyphicon glyphicon-time"></span> March 14, 2016</p>
 
-          <!-- Date/Time -->
-          <p><span class="glyphicon glyphicon-time"></span> March 14, 2016</p>
+                <hr>
 
-          <hr>
-
-          <!-- Post Content -->
-          <p class="lead">Greetings competitors, and welcome back to another season of the Swinlympia!</p>
-          <p>After the enormous success of the 2015 season, the Swinlympia is back again this year under a new promoter - The Swinburne Life Preservation Committee, chaired by none other than Swinburne alumni, Harold Swine.</p>
-          <p>The SLPC hopes to further build upon the Swinlympia’s motto of ‘Health, physique, and mind. Conquer the games, Conquer yourselves!’ by crowning this years champion as the face of the ‘New Era’, as Mr Swine put it during the SLPC press conference earlier this year.</p>
-          <p>‘I started this committee to breed unity within the university. Swinlympia’s stature and appeal is cornerstone to what I believe Swinburne is about - the preservation of life, not just physical, but mentally as well. It truly is a testament to Swinlympia’s team for designing events that can be played by all walks of life.’ Mr Swine said during his opening remarks at the SLPC press conference.</p>
-          <br>
-          <p>The 2016 Swinlympia season looks promising. Events kick off on the 9th of May, so stay tuned and stay active, competitors, for the games have only just begun!</p>
-
+                <!-- Post Content -->
+                <p class="lead">Greetings competitors, and welcome back to another season of the Swinlympia!</p>
+                <p>After the enormous success of the 2015 season, the Swinlympia is back again this year under a new promoter - The Swinburne Life Preservation Committee, chaired by none other than Swinburne alumni, Harold Swine.</p>
+                <p>The SLPC hopes to further build upon the Swinlympia’s motto of ‘Health, physique, and mind. Conquer the games, Conquer yourselves!’ by crowning this years champion as the face of the ‘New Era’, as Mr Swine put it during the SLPC press conference earlier this year.</p>
+                <p>‘I started this committee to breed unity within the university. Swinlympia’s stature and appeal is cornerstone to what I believe Swinburne is about - the preservation of life, not just physical, but mentally as well. It truly is a testament to Swinlympia’s team for designing events that can be played by all walks of life.’ Mr Swine said during his opening remarks at the SLPC press conference.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      <hr>
-      <hr>
       </div>
 
     </div>
