--- a/slpc.html
+++ b/slpc.html
@@ -103,46 +103,10 @@
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" href="#blogpost95">Remembering William Kelly-Hall, 2 years on</a>
-                </h4>
-              </div>
-              <div id="blogpost95" class="panel-collapse">
-                <div class="panel-body">
-                  <!-- Title -->
-                  <h1>Remembering William Kelly-Hall, 2 years on</h1>
-
-                  <!-- Author -->
-                  <p><em>
-                    Felicity Boveheart, editor at The Daily Burne
-                  </em></p>
-
-                  <!-- Date/Time -->
-                  <p><span class="glyphicon glyphicon-time"></span> 30 April, 2016</p>
-
-                  <hr>
-
-                  <!-- Post Content -->
-                  <p class="lead">Next week on the 7th of May will mark the two year anniversary of the death of William Kelly-Hall, Swinlympia Alumni Season 2013.</p>
-                  <p>A fierce competitor, William was a standout during the ‘13 season of the games. An all around talent, his game has helped shaped some of the competitors of today.</p>
-                  <p>From all of us here at The Daily Burne, SLPC and Swinlympia, our regards go out to the Kelly-Hall family.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Blog Post -->
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="panel-group">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
                   <a data-toggle="collapse" href="#blogpost">~ 0pen ur 3yes ‘Competitors’  ~</a>
                 </h4>
               </div>
-              <div id="blogpost" class="panel-collapse collapse">
+              <div id="blogpost" class="panel-collapse">
                 <div class="panel-body fasghack">
                   <!-- Title -->
                   <h1>~ 0pen ur 3yes ‘Competitors’  ~</h1>
