--- a/slpcswinlympia.html
+++ b/slpcswinlympia.html
@@ -97,17 +97,18 @@
           <h2>Events</h2>
             <h3>Week 1</h3>
               <h4>Wasp's Nest</h4>
-              <p>Date: May 9th - 1:30pm @ Wakefield Gardens</p>
+              <p>Date: May 9th - 1:30pm @ Central Gardens</p>
               <p>Explanation</p>
             <h3>Week 2</h3>
               <h4>Blackout</h4>
-              <p>Date: May 16th - 1:30pm @ </p>
+              <p>Date: May 16th - 1:30pm @ Wakefield Gardens</p>
               <p>Explanation</p>
               <h4>Corridor Sprint</h4>
-              <p>Date: May 16th - ~2:15pm @ Wakefield Gardens</p>
+              <p>Date: May 16th - ~2:00pm @ Central Gardens</p>
               <p>Explanation</p>
             <h3>Week 3</h3>
-              <p>Date: TBA</p>
+              <h4>Blackout</h4>
+              <p>Date: Outside of The George</p>
               <p><em>TBA</em></p>
             <h3>Week 4</h3>
               <p>Date: TBA</p>
